# sensiurl

./: README.md  pyproject.toml  requirements.txt
sensiurl/: __init__.py  candidates.py  cli.py  detectors.py  fetcher.py  models.py  reporter.py  scanner.py  tui.py
